public/stylesheets/style.css
/* ... */
#settings-dropdown-menu{
  left: -113px;
  padding-top: 0;
  padding-bottom: 0;
}

#login-dropdown-menu > input, #login-dropdown-menu > button {
  margin-top: 5px;
}

#login-dropdown-menu > a {
  margin-top: 3px;
  font-size: 12px;
}

.nav .open>a, .nav .open>a:hover, .nav .open>a:focus{
  background-color: #ffffff;
}

#create-modal .form-control{
  margin-top: 5px;
  margin-bottom: 5px;
}

#signup-modal .form-control{
  margin-top: 5px;
  margin-bottom: 5px;
}

.modal-backdrop {
  position: fixed;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  background-color: #000000;
}

.modal-backdrop.fade {
  opacity: 0;
}

.modal-backdrop, .modal-backdrop.fade.in {
  opacity: 0.8;
  filter: alpha(opacity=80);
}

.modal-dialog{
  width: 60%;
}

.modal-body{
  overflow-y: auto;
}

.modal-body .post-description{
  white-space: pre;
  margin-left: 5px;
  margin-top: 20px;
}

.modal-title{
  font-weight: 600;
  font-size: 20px;
}

.modal-body .category-tag{
  margin-top: 20px;
}

.modal-image-container{
  display: inline-block;
  width: 60%;
  margin-left: 20%;
  position: relative;
  border: 1px #18bc9c solid;
  border-radius: 3px;
  background-color: #ECF0F1;
}

.modal-image-container:after{
  content: '';
  display: block;
  margin-top: 70%;
}

.modal-image{
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  background-size: contain;
  background-repeat: no-repeat;
  background-position: center center;
}

.modal-thumbnails{
  margin-top: 5px;
  margin-bottom: 5px;
  margin-left: 20%;
}

.modal-thumbnail{
  border: 1px solid #34495e;
  height: 40px;
  width: 40px;
  margin-right: 3px;
}

#create-modal .modal-thumbnail{
  height: 50px;
  width: 50px;
  margin: 5px;
}

#create-modal .modal-thumbnails{
  margin-left: 0;
}

.modal-body::-webkit-scrollbar-track{
	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
	border-radius: 10px;
	background-color: #F5F5F5;
}

.modal-body::-webkit-scrollbar{
	width: 4px;
	background-color: #F5F5F5;
}

.modal-body::-webkit-scrollbar-thumb{
	border-radius: 4px;
	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
	background-color: #34495e;
}


body::-webkit-scrollbar-track{
	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
	border-radius: 10px;
	background-color: #F5F5F5;
}

body::-webkit-scrollbar{
	width: 4px;
	background-color: #F5F5F5;
}

body::-webkit-scrollbar-thumb{
	border-radius: 4px;
	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
	background-color: #18bc9c;
}


@media (max-width: 983px) {
  .jumbotron h1{
    font-size: 65px;
  }
  .marketing p + h4 {
    margin-top: 0;
  }
  .post {
    text-align: center;
  }
  .price {
    width: 100px !important;
    margin-left: calc(50% - 50px);
  }
  .row{
    margin-left: 0;
    margin-right: 0;
  }
  #category-filter{
    display: inline-block !important;
    margin-left: 0;
  }
  .col-xs-1, .col-sm-1, .col-md-1, .col-lg-1,
  .col-xs-2, .col-sm-2, .col-md-2, .col-lg-2,
  .col-xs-3, .col-sm-3, .col-md-3, .col-lg-3,
  .col-xs-4, .col-sm-4, .col-md-4, .col-lg-4,
  .col-xs-5, .col-sm-5, .col-md-5, .col-lg-5,
  .col-xs-6, .col-sm-6, .col-md-6, .col-lg-6,
  .col-xs-7, .col-sm-7, .col-md-7, .col-lg-7,
  .col-xs-8, .col-sm-8, .col-md-8, .col-lg-8,
  .col-xs-9, .col-sm-9, .col-md-9, .col-lg-9,
  .col-xs-10, .col-sm-10, .col-md-10, .col-lg-10,
  .col-xs-11, .col-sm-11, .col-md-11, .col-lg-11,
  .col-xs-12, .col-sm-12, .col-md-12, .col-lg-12 {
    padding-left: 0;
    padding-right: 0;
    width: 100%;
  }
  .row .post{
    padding-bottom: 10px;
  }
  .row .post h1, h2, h3, h4, h5{
    margin-top: 4px;
    margin-bottom: 4px;
  }
  .modal-dialog{
    width: auto;
  }
  .modal-image-container{
    width: 100%;
    margin-left: 0;
  }
  .modal-thumbnails{
    margin-left: 0;
  }
}

input.parsley-success,
select.parsley-success,
textarea.parsley-success {
  color: #468847;
  background-color: #DFF0D8;
  border: 1px solid #D6E9C6;
}

.parsley-errors-list {
  margin: 2px 0 3px;
  padding: 0;
  list-style-type: none;
  font-size: 0.9em;
  line-height: 0.9em;
  opacity: 0;
  -moz-opacity: 0;
  -webkit-opacity: 0;

  transition: all .3s ease-in;
  -o-transition: all .3s ease-in;
  -moz-transition: all .3s ease-in;
  -webkit-transition: all .3s ease-in;
}

.parsley-errors-list.filled {
  opacity: 1;
}


.btn-file {
    position: relative;
    overflow: hidden;
}
.btn-file input[type=file] {
    position: absolute;
    top: 0;
    right: 0;
    min-width: 100%;
    min-height: 100%;
    font-size: 100px;
    text-align: right;
    filter: alpha(opacity=0);
    opacity: 0;
    outline: none;
    background: white;
    cursor: inherit;
    display: block;
}

.sweet-overlay{
  background-color: rgba(0,0,0,0.8) !important;
}

.navbar-default {
  background-color: #34495e;
  border-color: #18bc9c;
}
.navbar-default .navbar-brand {
  color: #eeeeee;
  font-weight: 500;
  font-size: 28px;
}

.navbar-default .navbar-text {
  color: #eeeeee;
}
.navbar-default .navbar-nav > li > a {
  color: #eeeeee;
}
.navbar-default .navbar-nav > li > a:hover, .navbar-default .navbar-nav > li > a:focus {
  color: #18bc9c;
}
.navbar-default .navbar-nav > li > .dropdown-menu {
  background-color: #34495e;
}
.navbar-default .navbar-nav > li > .dropdown-menu > li > a {
  color: #eeeeee;
}
.navbar-default .navbar-nav > li > .dropdown-menu > li > a:hover,
.navbar-default .navbar-nav > li > .dropdown-menu > li > a:focus {
  color: #18bc9c;
}
.navbar-default .navbar-nav > li > .dropdown-menu > li > .divider {
  background-color: #34495e;
}
.navbar-default .navbar-nav > .active > a, .navbar-default .navbar-nav > .active > a:hover, .navbar-default .navbar-nav > .active > a:focus {
  color: #18bc9c;
  background-color: #18bc9c;
}
.navbar-default .navbar-nav > .open > a, .navbar-default .navbar-nav > .open > a:hover, .navbar-default .navbar-nav > .open > a:focus {
  background-color: #18bc9c;
}
.navbar-default .navbar-toggle {
  border-color: #18bc9c;
}
/* ... */

